--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   },
   "homepage": "https://github.com/theanarch/JavaScript1%14#readme",
   "dependencies": {
-    "angular": "^1.6.9",
-    "jquery": "^3.3.1"
+    "@angular/cli": "^1.7.3",
+    "lodash": "^4.17.5"
   },
   "devDependencies": {
-    "lodash": "^4.17.5"
+    "@angular/core": "^6.0.0-rc.0",
+    "jquery": "^3.3.1"
   }
 }
